--- a/ejercicio024_lluviadehojas/index.html
+++ b/ejercicio024_lluviadehojas/index.html
@@ -7,9 +7,51 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <main>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis laudantium accusamus rerum praesentium laboriosam quis fuga facere illum aliquid odit earum id architecto, provident corrupti, ipsam explicabo at illo!</p>
+    </main>
     <div id="gato1">
         <img src="./images/Gatito-En-Png.png">
     </div>
+    <footer>
+        <div id="bCerrar">X</div>
+        <p>lo que sea</p>
+    </footer>
 </body>
 </html>
 <script src="js/motor.js"></script>
